แก้ไขตารางไม่แสดง

--- a/templates/loan_management.html
+++ b/templates/loan_management.html
@@ -547,7 +547,7 @@
                         </button>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="#">ทำอนุมัติยอด</a></li>
-                            <li><a class="dropdown-item" href="#">ตารางอนุมัติลูกค้า</a></li>
+                            <li><a class="dropdown-item" href="{{ url_for('loan_management') }}">ตารางอนุมัติลูกค้า</a></li>
                         </ul>
                     </div>
 
