--- a/templates/data_entry.html
+++ b/templates/data_entry.html
@@ -528,7 +528,7 @@
 
                     <div class="input-group">
                         <label for="status">สถานะ</label>
-                        <input type="text" id="status" name="status" placeholder="กรอกสถานะ">
+                        <input type="text" id="status" name="status" value="รอดำเนินการ" readonly>
                     </div>
 
                     <div class="input-group">
