--- a/templates/loan_management.html
+++ b/templates/loan_management.html
@@ -652,6 +652,8 @@
     </tbody>
   </table>
 </div>
+{% endif %}
+
 
 
 <div id="approve-popup" class="modal" style="display:none;">
@@ -904,3 +906,5 @@
     });
   });
 </script>
+</body>
+</html>
