--- a/templates/loan_management.html
+++ b/templates/loan_management.html
@@ -599,7 +599,7 @@
 
             {% if approove_data %}
 <!-- ตารางอนุมัติยอด -->
-<div class="approove-table-section">
+<div class="approove-table-section" style="display:none;">
   <h3>ตารางอนุมัติลูกค้า</h3>
   <table class="approove-table">
     <thead>
@@ -627,7 +627,7 @@
 </div>
 
 <!-- ตารางปิดจ๊อบ -->
-<div class="closejob-table-section">
+<div class="closejob-table-section" style="display:none;">
   <h3>ตารางลูกค้าปิดจ๊อบ</h3>
   <table class="closejob-table">
     <thead>
